[project]
name = "agent-structure"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "dotenv>=0.9.9",
    "pydantic>=2.11.7",
    "pydantic-settings>=2.10.1",
    "redis>=6.2.0",
    "fastapi[standard]>=0.115.12",
    "uvicorn>=0.34.2",
    "openai>=1.107.1",
    "langchain>=0.3.27",
    "langgraph>=0.6.8",
    "langchain-community>=0.3.30",
    "langchain-mcp-adapters>=0.1.10",
    "langchain-openai>=0.3.34",
    "langchain-google-genai>=2.1.12",
    "langchain-qdrant>=1.1.0",
    "qdrant-client>=1.12.0",
]
